changing the data structure
